sintaxis y correciones menores docu

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,10 @@
-commit 78dfae443d39dac7eaad8777a994ad2a74f13f18
+commit bb123825674c1ebcada36c5e70aa26edffe1a816
+Author: PICCORO Lenz McKAY <mckaygerhard@gmail.com>
+Date:   Wed Jul 4 16:04:12 2018 -0400
+
+    sintaxis y correciones menores docu
+
+commit c172734e200e08106c87bfc178a08b46b5b028e8
 Author: PICCORO Lenz McKAY <mckaygerhard@gmail.com>
 Date:   Wed Jul 4 15:05:45 2018 -0400
 
